<resources>
    <string name="app_name">Workout Mate</string>
    <string name="메뉴">메뉴</string>
    <string name="workout_mate">Workout Mate</string>
    <string name="Menu">메뉴</string>
    <string name="Search">검색</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">setting</string>
    <string name="Watch">00:00:00\n[스톱워치 들어갈 자리]</string>
    <string name="Start">Start</string>
    <string name="Reset">Reset</string>
    <string name="write">기록</string>
    <string name="Data">운동 자료</string>
    <string name="Stop_watch">스톱 워치</string>
    <string name="Workout_data">운동 정보</string>
    <string name="Title">제목</string>
    <string name="Notice_title">제목:</string>
    <string name="Notice_contents">내용:</string>
    <string name="Notice">공지사항</string>
    <string name="Bookmark">바로가기</string>
    <string name="Recommendation_movie">추천동영상</string>
    <string name="Recommendation_info">추천정보</string>
    <string name="Home">홈</string>
    <string name="Workout_diary">운동 일지</string>
    <string name="Workout_info">운동 정보</string>
    <string name="Workout_mate">Workout Mate</string>
    <string name="Movie">동영상</string>
    <string name="Text">문서</string>
    <string name="Pause">Pause</string>
    <string name="Write_complete">작성 완료</string>
    <string name="Photo">사진촬영</string>
    <string name="Back"><![CDATA[<<]]></string>
    <string name="Play">▷</string>
    <string name="Stop">■</string>
    <string name="Next"><![CDATA[>>]]></string>
    <string name="Music_info"><![CDATA[>> 운동할 때 듣기 좋은 노래 <<]]></string>
    <string name="Movie_info"><![CDATA[<추천영상>]]></string>
    <string name="videoNum1_info">[YOUTUBE]\n\n스쿼트 기초 | 강경원</string>
    <string name="videoNum2_info">[YOUTUBE]\n\n운동할때 뼈소리. 어떻게 해야 할까?</string>
    <string name="fileNum1_info">[NAVER]\n\n잘못 알고 있는 운동 상식</string>
    <string name="fileNum2_info">[NAVER]\n\n이기자! 코로나19, 운동하고 싶은데 헬스장 가도 될까?</string>
    <string name="writeFile">작성 하기</string>
    <string name="addPhoto">사진 추가하기</string>
    <string name="url">URL:</string>
    <string name="title">Title:</string>
    <string name="contents">Contents:</string>
    <string name="correction">수정하기</string>
    <string name="Gallary">앨범</string>
    <string name="Exit">나가기</string>
    <string name="infoNotice">리스트를 길게 눌러 북마크, 수정, 제거 가능.</string>
    <string name="bookmark_info"><![CDATA[<북마크> 길게눌러 제거 가능]]></string>
    <string name="Contents">내용</string>
    <string name="WriteNotice">공지 작성</string>
    <string name="pause">||</string>
    <string name="time">0:00</string>
    <string name="addKeyword">키워드 추가</string>
    <string name="removeKeyword">키워드 제거</string>
    <string name="workoutFriend">소모임</string>
    <string name="cancel">취소</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="bookmarkDialog"><![CDATA[< 북마크 위치선택 >]]></string>
    <string name="workoutFriendNotice">주소록을 (키워드 이름)으로 등록해주세요! \nex)소모임 김성빈</string>
    <string name="bmiCalculate">BMI 측정</string>
    <string name="cm">cm</string>
    <string name="height">키</string>
    <string name="woman">여성</string>
    <string name="man">남성</string>
    <string name="sex">성별</string>
    <string name="weight">몸무게</string>
    <string name="kg">kg</string>
    <string name="subMenu">서브 메뉴</string>
    <string name="publicSptCenter">공공체육시설</string>
    <string name="publicSptCenterInfoNotice">서울 소재 공공체육시설 현황입니다. \n출처: 서울특별시 열린데이터 광장</string>
    <string name="foodDB">국가표준식품성분</string>
    <string name="foodElementsNotice">식품의 구성영양성분을 알려드립니다.\n출처: 국립농업과학원</string>
    <string name="kakaoLink">카카오링크</string>
</resources>
