<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:weightSum="10"
    tools:context=".Info_write_Activity">

    <ImageView
        android:id="@+id/IV_thumbnail"
        android:layout_width="160dp"
        android:layout_height="0dp"
        android:minWidth="160dp"
        android:minHeight="90dp"
        android:background="@drawable/emptyimage"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="2"/>

    <Button
        android:id="@+id/BTN_addImage"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:text="@string/addPhoto"
        android:layout_margin="5dp"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/url"
        android:textColor="@color/red"
        android:layout_marginTop="15dp"/>

    <EditText
        android:id="@+id/ET_url"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="@color/red"
        android:layout_marginTop="15dp" />

    <EditText
        android:id="@+id/ET_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contents"
        android:textColor="@color/red"
        android:layout_marginTop="15dp"/>

    <EditText
        android:id="@+id/ET_contents"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:maxWidth="400dp"
        android:layout_weight="1"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"/>

    <Button
        android:id="@+id/BTN_complete"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:text="@string/Write_complete"
        android:layout_margin="5dp"
        android:layout_weight="1"/>

</LinearLayout>