<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.motion.widget.MotionLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    tools:context=".Home_Activity">

<!--    메뉴-->


<!--    <Button-->
<!--        android:id="@id/BTN_menu"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/Menu"-->
<!--        android:background="#FFFFFF"-->
<!--        app:layout_constraintBottom_toBottomOf="@id/TV_mainLogo"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="@id/TV_mainLogo"/>-->

<!--    메인로고-->
    <TextView
        android:id="@id/TV_mainLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Workout_mate"
        android:textColor="#03A9F4"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


<!--    공지사항-->
    <TextView
        android:id="@id/TV_notice"
        android:textColor="#FF0000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18sp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/Notice"
        app:layout_constraintTop_toBottomOf="@id/TV_mainLogo"/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Movie_info"
        android:textStyle="bold|italic"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@id/IV_thumbnail"/>

    <ImageView
        android:id="@id/IV_thumbnail"
        android:layout_width="380dp"
        android:layout_height="208dp"
        android:layout_marginBottom="5dp"
        android:src="@drawable/thumbnail1"
        android:clickable="true"
        app:layout_constraintBottom_toTopOf="@id/GUI_horizontal8"
        app:layout_constraintLeft_toLeftOf="parent" />

    <!--    운동영상-->
    <VideoView
        android:id="@id/VV_movie"
        android:layout_width="380dp"
        android:layout_height="208dp"
        android:layout_marginBottom="5dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/GUI_horizontal8"
        app:layout_constraintLeft_toLeftOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@id/GUI_horizontal8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#26000000"
        app:layout_constraintTop_toBottomOf = "@id/GUI_horizontal8" />

<!--    음악플레이어-->
    <TextView
        android:id="@id/TV_musicInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Music_info"
        android:textStyle="italic|bold"
        android:textSize="20sp"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@id/TV_notice"
        app:layout_constraintRight_toRightOf="parent" />
    <TextView
        android:id="@id/TV_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Back"
        android:textSize="32dp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:clickable="true"
        app:layout_constraintTop_toBottomOf="@id/TV_musicInfo"
        app:layout_constraintLeft_toRightOf="@id/IV_thumbnail"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore ="spUsage" />
    <TextView
        android:id="@id/TV_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Play"
        android:textSize="32dp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:clickable="true"
        app:layout_constraintTop_toBottomOf="@id/TV_back"
        app:layout_constraintLeft_toRightOf="@id/IV_thumbnail"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore ="spUsage" />
    <TextView
        android:id="@id/TV_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Stop"
        android:textSize="32dp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:clickable="true"
        app:layout_constraintTop_toBottomOf="@id/TV_play"
        app:layout_constraintLeft_toRightOf="@id/IV_thumbnail"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore ="spUsage" />
    <TextView
        android:id="@id/TV_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Next"
        android:textSize="32dp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:clickable="true"
        app:layout_constraintTop_toBottomOf="@id/TV_stop"
        app:layout_constraintLeft_toRightOf="@id/IV_thumbnail"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore ="spUsage" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintBottom_toTopOf="@id/BTN_info"
        android:layout_marginBottom="3dp"
        android:background="#000000"/>

    <!--    음악플레이어 배치용 가이드라인-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@id/GUI_horizontal9.2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.92"/>

    <!--    컨텐츠-->
    <Button
        android:id="@id/BTN_home"
        android:text="@string/Home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#CC2A1E"
        android:background="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <Button
        android:id="@id/BTN_diary"
        android:text="@string/Workout_diary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <Button
        android:id="@id/BTN_info"
        android:text="@string/Workout_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/BTN_stopwatch"
        app:layout_constraintStart_toEndOf="@id/BTN_home" />
    <Button
        android:id="@id/BTN_stopwatch"
        android:text="@string/Stop_watch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/BTN_diary"
        app:layout_constraintLeft_toRightOf="@id/BTN_info"/>


    <!--    <com.google.android.exoplayer2.ui.PlayerView-->
<!--        android:id="@+id/EXO_movie"-->
<!--        android:layout_width="400dp"-->
<!--        android:layout_height="225dp"-->
<!--        app:layout_constraintBottom_toTopOf="@id/VV_movie"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintRight_toRightOf="parent"/>-->

</androidx.constraintlayout.motion.widget.MotionLayout>
