<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".Workout_Friend_Activity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:gravity="center"
        android:text="운동 소모임!!"
        android:textSize="32dp"
        android:textColor="@color/mainLogo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:weightSum="10"
        android:orientation="horizontal"
        android:layout_weight="0.7">

        <Button
            android:id="@+id/BTN_exit"
            android:layout_width="0dp"
            android:layout_weight="2.5"
            android:layout_height="wrap_content"
            android:text="@string/Exit" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"/>

        <Button
            android:id="@+id/BTN_addKeyword"
            android:layout_width="0dp"
            android:layout_weight="2.5"
            android:layout_height="wrap_content"
            android:text="@string/addKeyword" />

        <Button
            android:id="@+id/BTN_removeKeyword"
            android:layout_width="0dp"
            android:layout_weight="2.5"
            android:layout_height="wrap_content"
            android:text="@string/removeKeyword" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/layoutColor"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:text="@string/workoutFriendNotice"
        android:gravity="center"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/layoutColor"/>

    <ListView
        android:id="@+id/LV_contact"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7.9"
        android:divider="#EEEEEE"
        android:dividerHeight="0px">

    </ListView>

</LinearLayout>